templates/vnet.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
        "resPrefix": {
            "type": "string",
            "defaultValue": "moodle"
        }, 
        "addressSpace" : {
            "type": "string",
            "defaultValue": "172.16.0.0"
        }
  },
  "variables": {
        "rpfx" : "[tolower(parameters('resPrefix'))]",
        "vnetName": "[concat(variables('rpfx'),'-vnet')]",
        "SubnetWeb": "[concat('web-',variables('rpfx'),'-subnet')]",
        "SubnetSan": "[concat('san-',variables('rpfx'),'-subnet')]",
        "SubnetDb": "[concat('data-',variables('rpfx'),'-subnet')]",
        "octets" : "[split(parameters('addressSpace'), '.')]",
        "vnetPrefix": "[concat(parameters('addressSpace'),'/16')]",
        "SubnetWebPrefix": "[concat( variables('octets')[0], '.', variables('octets')[1], '.', string(add(int(variables('octets')[2]),0)), '.0/24' ) ]",
        "SubnetSanPrefix": "[concat( variables('octets')[0], '.', variables('octets')[1], '.', string(add(int(variables('octets')[2]),1)), '.0/24' ) ]",
        "SubnetDbPrefix":  "[concat( variables('octets')[0], '.', variables('octets')[1], '.', string(add(int(variables('octets')[2]),2)), '.0/24' ) ]"
  }, 
  "resources": [
        {
            "name": "[variables('vnetName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-06-15",
            "tags": {
                "displayName": "Virtual Network"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('SubnetWeb')]",
                        "properties": {
                            "addressPrefix": "[variables('SubnetWebPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('SubnetSan')]",
                        "properties": {
                            "addressPrefix": "[variables('SubnetSanPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('SubnetDb')]",
                        "properties": {
                            "addressPrefix": "[variables('SubnetDbPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat('lb-',variables('rpfx'),'-ip')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "Load Balancer Public IP"
            },
            "apiVersion": "2015-06-15",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[concat('lb-',variables('rpfx'))]"
                },
                "publicIPAllocationMethod": "Dynamic",
                "tags": {
                    "displayName": "Public IP"
                }
            }
        },        
        {
            "name": "[concat('ctl-',variables('rpfx'),'-ip')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-06-15",
            "dependsOn": [],
            "tags": {
                "displayName": "Controller Public IP"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[concat('ctl-',variables('rpfx'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat('ctl-',variables('rpfx'),'-nsg')]",
            "apiVersion": "2016-03-30",
            "tags": {
                "displayName": "Controller NSG"
            },
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow_http",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1005,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }            
  ]
}
